unpackaged/main/default/objects/Product2/fields/Prescription_Only__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does Product require a Prescription?</description>
    <label>Prescription Only</label>
    <type>Checkbox</type>
</CustomField>