unpackaged/main/default/objects/Product2/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment</label>
    <referenceTo>Treatment__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>